--- a/part2/2.20-data-for-countries-bonus/src/App.css
+++ b/part2/2.20-data-for-countries-bonus/src/App.css
@@ -1,1 +1,9 @@
-
+.debug {
+    color: red;
+    background: lightgrey;
+    font-size: 1em;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
